--- a/dart/examples/web_example/web/index.html
+++ b/dart/examples/web_example/web/index.html
@@ -9,6 +9,20 @@
     <title>dart_web</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
+
+    <style>
+      .bloc {
+        display: flex;
+        margin: 1rem;
+      }
+
+      .result {
+        padding-left: 1rem;
+        color: green;
+        display: none;
+      }
+    </style>
+
     <script defer src="main.dart.js"></script>
 </head>
 
@@ -16,7 +30,20 @@
 
 <div id="output"></div>
 
-<button id="bt">Capture</button>
+<div class="bloc">
+    <button id="btEvent">Capture Event</button>
+    <div id="eventResult" class="result">Captured</div>
+</div>
+
+<div class="bloc">
+    <button id="btMessage">Capture Message</button>
+    <div id="messageResult" class="result">Captured</div>
+</div>
+
+<div class="bloc">
+    <button id="btException">Capture Exception</button>
+    <div id="exceptionResult" class="result">Captured</div>
+</div>
 
 </body>
 </html>
