--- a/dart/example_web/web/index.html
+++ b/dart/example_web/web/index.html
@@ -45,5 +45,10 @@
     <div id="exceptionResult" class="result">Captured</div>
 </div>
 
+<div class="bloc">
+  <button id="btUnhandledException">Capture Unhandled Exception</button>
+  <div id="unhandledResult" class="result">Captured</div>
+</div>
+
 </body>
 </html>
