Fix Web examples

--- a/flutter/example/web/index.html
+++ b/flutter/example/web/index.html
@@ -16,6 +16,7 @@
 
   <title>sentry_flutter_example</title>
   <link rel="manifest" href="manifest.json">
+  <base href="/sentry-dart/">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
